--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "rehavita",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tperezromero5.github.io/react/build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.4",
+    "firebase": "^10.7.1",
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
